feat: added first version of viper config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     networks:
       - local_network
     volumes:
-      - ./configs:/etc/service/config:ro
+      - ./configs:/config:ro
     build: .
 networks:
   local_network:
