--- a/configs/example-config.yaml
+++ b/configs/example-config.yaml
@@ -1,13 +1,21 @@
-postgres_conn: postgres://user:12345678@postgres:5432/database
-https:
+secrets:
+  postgres_conn: postgres://user:12345678@postgres:5432/database
+  # an absolute path to x509 server certificates.
+  # Here it is as it is because of docker volume mounting
+  # local directory configs mounts to /config directory inside a container
+  tls_cert_path: /config/example-certs/server-key.pem
+  tls_key_path: /config/example-certs/server-key.pem
+http:
   port: 8080
+  # does not work yet
+  use_tls: false
 grpc:
   port: 5050
+  # does not work yet
+  use_tls: false
   timeout: 3s
 tokens:
   issuer: yoursso.com
-  secret_path: example-certs/server-key.pem
-  public_path: example-certs/server-key.pem
   access_ttl: 5m
   refresh_ttl: 240h
   id_ttl: 5m
