--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 bin
 ignore-*
 _ignore-*
-configs/config.yaml
+configs/sso.yaml
+configs/sso.env
+configs/cert.pem
+configs/key.pem
 configs/postgres.env
