--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -62,6 +62,8 @@ linters-settings:
       - default
   lll:
     line-length: 100
+  nlreturn:
+    block-size: 2
 linters:
   enable-all: true
   disable:
