chore: added redis with AOF persistence

--- a/configs/example-postgres.env
+++ b/configs/example-postgres.env
@@ -1,23 +1,29 @@
-# This is a configuration for postgres
-# database which runs in a container
-# defined in docker-compose.yaml
+# This is a configuration for a Postgres database running in a container
+# defined in docker-compose.yaml.
 
-# Every env written here will be inside of
-# a postgres container
+# Every environment variable defined here will be available inside the
+# Postgres container.
 
-# List of all possible envs can be found here:
+# List of all possible environment variables:
 # https://hub.docker.com/_/postgres/
 
-# Write your own db name, username and password
-# then rename file to postgres.env to get it ignored
+# To use this configuration:
+# 1. Replace the placeholder values below with your desired credentials.
+# 2. Rename the file to `postgres.env`. This ensures it is picked up by
+#    your application and ignored by version control (if applicable).
+# 3. Ensure the database, username, and password fields under the
+#    secrets.postgres section in your sso.yaml file match the values
+#    you set below.
 POSTGRES_DB=database
 POSTGRES_USER=username
 POSTGRES_PASSWORD=user_password
 
-# If you wanna use local postgres instance running on your computer
-# comment postgres service section in docker compose.yaml
-# Because these envs are only needed to run postgres, not connect to it
+# Using a local Postgres instance:
+# If you want to connect to a Postgres instance running locally on your 
+# machine (not within Docker), you can comment out the "postgres" service 
+# section in your `docker-compose.yaml` file. This is because the 
+# environment variables in this file are only used for running a Postgres 
+# container, not for connecting to an external one.
 
-# If you have a kubernetes postgres StatefulSet or a pod
-# or just a usual docker container running on your machine
-# you don't need this file as well
+# If you have a Kubernetes Postgres StatefulSet, a pod, or a regular Docker 
+# container running on your machine, you don't need this file.
