--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@ bin
 .vscode
 ignore-*
 _ignore-*
-configs/sso.yaml
-configs/sso.env
-configs/cert.pem
-configs/key.pem
-configs/postgres.env
+configs/*
+!configs/example-*
