--- a/configs/example-sso.yaml
+++ b/configs/example-sso.yaml
@@ -1,30 +1,58 @@
-# This section is completely ignored
-# if you're running instance in a container
-containerless:
-  # To set this value in a container evironment, change POSTGRES_CONN in example-sso.env
+# example-sso.yaml is an example configuration file for the SSO service.
+
+# TLS configuration.
+# Paths must be either absolute or relative to the current file.
+tls:
+  # certPath is the path to the TLS certificate file.
+  # Can be overriden by TLS_CERT_PATH environment variable.
+  # Default is /etc/sso/tls.crt to be comfortable to use with kubernetes.
+  certPath: example-cert.pem
+  # keyPath is the path to the TLS key file.
+  # Can be overriden by TLS_KEY_PATH environment variable.
+  # Default is /etc/sso/tls.key to be comfortable to use with kubernetes.
+  keyPath: example-key.pem
+secrets:
+  # postgresConn is the connection string to the PostgreSQL database.
+  # Can be overriden by POSTGRES_CONN environment variable.
   postgresConn: postgres://username:user_password@localhost:5432/database
-
-  # In a container these values will always be "/etc/sso/cert.pem" and "/etc/sso/key.pem as well
-  # so you cannot specify them there
-  # But locally as much as want
-  # To have those PEM files in a container, just add them in the configs directory
-  # (current directory) like it's done with example-*.pem files
-  tlsCertPath: example-cert.pem
-  tlsKeyPath: example-key.pem
-
-  # To set this value in a container evironment, change SECRET_STRING in example-sso.env
-  secretString: "our_big_secret"
-
+  # secretString is a secret string used by the application.
+  # Can be overriden by SECRET_STRING environment variable.
+  secretString: our_big_secret
 http:
+  # port is the port number that the HTTP server will listen on.
+  # Can be overriden by HTTP_PORT environment variable.
+  # Default is 8080.
   port: 8080
+  # useTls specifies whether to use TLS for the HTTP server.
+  # Can be overriden by HTTP_USE_TLS environment variable.
+  # Default is false.
   useTls: false
 grpc:
+  # port is the port number that the gRPC server will listen on.
+  # Can be overriden by GRPC_PORT environment variable.
+  # Default is 5050.
   port: 5050
+  # useTls specifies whether to use TLS for the gRPC server.
+  # Can be overriden by GRPC_USE_TLS environment variable.
+  # Default is false.
   useTls: false
+  # timeout is the timeout for gRPC requests.
+  # Can be overriden by GRPC_TIMEOUT environment variable.
+  # Default is 5s.
   timeout: 3s
 tokens:
+  # issuer is the issuer of the JWT tokens.
+  # Can be overriden by TOKENS_ISSUER environment variable.
   issuer: sso.io
+  # accessTtl is the time-to-live for access tokens.
+  # Can be overriden by TOKENS_ACCESS_TTL environment variable.
   accessTtl: 5m
+  # refreshTtl is the time-to-live for refresh tokens.
+  # Can be overriden by TOKENS_REFRESH_TTL environment variable.
   refreshTtl: 240h
+  # idTtl is the time-to-live for ID tokens.
+  # Can be overriden by TOKENS_ID_TTL environment variable.
   idTtl: 24h
+  # emailVerificationTtl is the time-to-live for email verification tokens.
+  # Can be overriden by TOKENS_EMAIL_VERIFICATION_TTL environment variable.
   emailVerificationTtl: 2h
